add homepage to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mister-email",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://irisor.github.io/mister-email/",
   "type": "module",
   "scripts": {
     "dev": "vite",
